--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="./css/reset.css">
+    <!-- <link rel="stylesheet" href="./css/reset.css"> -->
     <title>meituan</title>
-
+    <style>
+      blockquote, body, button, dd, dl, dt, fieldset, form, h1, h2, h3, h4, h5, h6, hr, input, legend, li, ol, p, pre, td, textarea, th, ul {
+        margin: 0;
+        padding: 0;
+      }
+      body{
+        font-family: Tahoma,Arial,"宋体";
+        font-size: 12px;
+        line-height: 1.5;
+        color: #424242;
+      }
+      li{
+        list-style: none;
+      }
+      a{
+        text-decoration: none;
+      }
+    </style>
   </head>
   <body>
     <noscript>
